# pygame_samples

./: .gitignore  README.md  demo_01.py  demo_02.py  demo_03.py  demo_04.py  demo_05.py  demo_LCD_font.py  demo_LCD_font_01.py  demo_car_crash.py  demo_dot_matrix_all.py  demo_font.py  demo_freetype.py  demo_monthly_calendar.py  demo_openmoji.py  fiar.py  lcd_font_mc.py  lcd_font_pg.py  pyproject.toml  readme.md  seven_seg_pg.py  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
fonts/: 4x7_number.txt
