[tool.poetry]
name = "pygame-samples"
version = "0.1.0"
description = ""
authors = ["yu184743 <96573503+yu184743@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
